# Spherical-Infoviz

./: .gitignore  .gitmodules  README-AlloSphere.md  README.md  allofw.yaml  allofw.yaml.allosphere  allofw.yaml.vive  allofw.yaml.window  audio.js  config.yaml.sample  hid.js  package.json  pythonSoundClient.py  server.py  sphere.sh  sync.sh
3DModels/earth/: earth.1.mtl  earth.mtl
3DModels/img/: earth.1.mtl  script.sh
preprocessed/: AllPowerPlants2.csv  emissionByCountry.csv  emissionByCountry2009.csv  emissionByCountry2009Top50.csv  emissionStudy.csv  plants_data_50.11.csv  plants_data_50.csv
preprocessed/data/: AllPowerPlants.csv  AllPowerPlantsv1.csv  AllPowerPlantsv2.csv  PowerPlantWorldA.csv  emissionByCountry.csv  emissionByCountry2.csv  emissionStudy.csv  emissionStudyChart.csv  plants_data_50.csv
sound/: CMakeLists.txt
sound/code/: sound.cpp
src/: app.ts  logger.ts  navigator.ts  studyController.ts  tsconfig.json  utils.ts
src/Scenes/: 2DCharts.ts  2DChartsC02.ts  2DChartsTemp.ts  modalities.ts  scene1.ts  scene2.ts  scene3.ts  scene3_2.ts  scene4.ts  scene42d.ts  scene5.ts  scene5_2.ts  scene6.ts  scene_tempAnomali.ts  scene_tempAnomalinm.ts  scene_tempMonlty.ts  scene_tempMonlty2.ts  scene_tempMonlty3.ts  steamCountryName.ts  steam_Earth.ts  steam_planetb.ts
src/media/: coastlines.ts  media.ts  panorama.ts  panorama_image.ts  panorama_video_player.ts  planar_image.ts  planar_video_player.ts
src/objects/: Line.ts  LineBezier.ts  bars.ts  coastlines.ts  fovBlocker.ts  matterportModel.ts  normal_co2.ts  objModel.ts  object.ts  (+11 more)
static/: index.html
(+45 files in other folders)
